# 1-types-io

./: .gitignore  CMakeLists.txt  Makefile  Quine.c  Quine.md  README.md  ascii.c  ascii.md  change.c  change.md  day_of_the_week.c  equation.c  equation.md  ezascii.c  ezascii.md  gray.c  gray.md  inverse.c  inverse.md  pi.c  pi.md  planck.c  planck.md  quine.c  time.c  time.md  weekday.c  weekday.md
